# fastsweep

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
src/: extension.cpp  redistance.cpp
src/fastsweep/: __init__.py
tests/: test_redistance.py
